--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -7,9 +7,12 @@
     tools:context=".ui.event.EventFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_create_event"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="32dp"
+        android:src="@android:drawable/ic_input_add"
+        app:maxImageSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
