--- a/app/src/main/res/layout/event_create_fragment.xml
+++ b/app/src/main/res/layout/event_create_fragment.xml
@@ -5,6 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     tools:context=".ui.event.EventCreateFragment">
 
     <EditText
