--- a/app/src/main/res/layout/event_create_fragment.xml
+++ b/app/src/main/res/layout/event_create_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    tools:context=".ui.event.EventCreateFragment">
+    tools:context=".event.EventCreateFragment">
 
     <EditText
         android:id="@+id/editTextTitle"
