--- a/app/src/main/res/layout/event_create_fragment.xml
+++ b/app/src/main/res/layout/event_create_fragment.xml
@@ -12,7 +12,19 @@
     android:layout_marginEnd="16dp"
     tools:context=".event.EventCreateFragment">
 
-
+    <TextView
+        android:id="@+id/textViewPageTitle"
+        android:layout_width="wrap_content"
+        android:layout_height= "wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@color/purple_700"
+        android:text="Create Event"
+        android:padding="16dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTitle"
@@ -25,19 +37,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPageTitle" />
-
-    <TextView
-        android:id="@+id/textViewPageTitle"
-        android:layout_width="wrap_content"
-        android:layout_height= "wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@color/purple_700"
-        android:text="Create Event"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextDescription"
@@ -64,56 +63,16 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
 
     <EditText
-        android:id="@+id/editTextLocation"
+        android:id="@+id/editTextSkillLevel"
         android:layout_width="0dp"
         android:layout_height= "wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Location"
+        android:hint="Skill level"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextSportType" />
-
-    <DatePicker
-        android:id="@+id/editTextDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Date"
-        android:datePickerMode="calendar"
-        android:overScrollMode="ifContentScrolls"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLocation"
-        />
-
-    <TimePicker
-        android:id="@+id/editTextTime"
-        android:layout_width="0dp"
-        android:layout_height= "wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Time"
-        android:inputType="time"
-        android:timePickerMode="spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
-
-    <TimePicker
-        android:id="@+id/editTextDuration"
-        android:layout_width="0dp"
-        android:layout_height= "wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Duration"
-        android:timePickerMode="spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />
 
     <EditText
         android:id="@+id/editTextMaxPlayers"
@@ -122,11 +81,81 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Maximum number of players"
-        android:inputType="numberSigned"
-
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDuration" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSkillLevel" />
+
+
+    <Button
+        android:id="@+id/editTextLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Set Location"
+        app:cornerRadius="32dp"
+        android:src="@android:drawable/ic_menu_mylocation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextMaxPlayers" />
+
+    <DatePicker
+        android:id="@+id/createDatePicker"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Date"
+        android:background="#99FF99"
+        android:datePickerMode="calendar"
+        android:overScrollMode="ifContentScrolls"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextLocation"
+        />
+
+    <TimePicker
+        android:id="@+id/createTimePicker"
+        android:layout_width="0dp"
+        android:layout_height= "wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Time"
+        android:inputType="time"
+        android:timePickerMode="spinner"
+        android:background="#99FF99"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createDatePicker" />
+
+    <TextView
+        android:id="@+id/textDuration"
+        android:layout_width="0dp"
+        android:layout_height= "wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:textAlignment="center"
+        android:text="Duration"
+        android:textSize="24sp"
+        android:background="#9999FF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createTimePicker" />
+
+    <TimePicker
+        android:id="@+id/timePickerDuration"
+        android:layout_width="0dp"
+        android:layout_height= "wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:background="#9999FF"
+        android:hint="Duration"
+        android:timePickerMode="spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDuration" />
+
+
 
     <Button
         android:id="@+id/buttonCreateEvent"
@@ -136,7 +165,7 @@
         android:text="Submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextMaxPlayers"
+        app:layout_constraintTop_toBottomOf="@+id/timePickerDuration"
         android:layout_marginBottom="80dp"/>
 
 
