added map to create events

--- a/app/src/main/res/layout/event_create_fragment.xml
+++ b/app/src/main/res/layout/event_create_fragment.xml
@@ -88,7 +88,7 @@
 
 
     <Button
-        android:id="@+id/editTextLocation"
+        android:id="@+id/btnCreateEventLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -111,7 +111,7 @@
         android:overScrollMode="ifContentScrolls"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLocation"
+        app:layout_constraintTop_toBottomOf="@+id/btnCreateEventLocation"
         />
 
     <TimePicker
