Type mismatch bug fixed and CreateEventRequestModel refactored

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,12 +41,12 @@
             app:popUpToInclusive="false" />
         <argument
             android:name="latitude"
-            app:argType="string"
-            android:defaultValue=""/>
+            app:argType="float"
+            android:defaultValue="41.0863"/>
         <argument
             android:name="longitude"
-            app:argType="string"
-            android:defaultValue=""/>
+            app:argType="float"
+            android:defaultValue="29.0441"/>
     </fragment>
     <fragment
         android:id="@+id/eventDetailFragment"
