--- a/app/src/main/res/layout/event_detail_fragment.xml
+++ b/app/src/main/res/layout/event_detail_fragment.xml
@@ -100,11 +100,11 @@
         android:id="@+id/event_detail_event_remaining_spots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="22"
         app:layout_constraintBottom_toBottomOf="@+id/event_detail_event_sport_type"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
-        android:layout_marginEnd="32dp"
         app:layout_constraintStart_toEndOf="@+id/event_detail_event_sport_type"
         app:layout_constraintTop_toTopOf="@+id/event_detail_event_sport_type"
         app:layout_constraintVertical_bias="0.0" />
@@ -165,5 +165,38 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_apply_event"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_apply_event" />
+
+    <TextView
+        android:id="@+id/event_detail_event_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="Comments:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/event_detail_event_sport_type" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/event_detail_event_comment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
